compiler/typ/tests/fixtures/diagnostics/0394_external_identity_use_mismatch_09.ml.infer.expected
File "0394_external_identity_use_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0394_external_identity_use_mismatch_09 is not a valid module name.

File "0394_external_identity_use_mismatch_09.ml", line 2, characters 16-20:
2 | let _ = id_iota true
                    ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
